--- a/src/Components/DinnerMenu/index.css
+++ b/src/Components/DinnerMenu/index.css
@@ -55,16 +55,13 @@
     text-shadow: rgb(168, 238, 246) 0px 0px 10px;
 }
 
-#popups-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
+#home-page .dinner-menu-container .navigation {
+    position: relative;
+    z-index: 999;
 }
 
-#popups-container img {
-    width: 20vw;
+.nav-toggle {
+    margin-bottom: 2rem;
 }
 
 @media only screen and (min-width: 320px) and (max-width: 690px) {
