--- a/src/Components/Navigation/index.css
+++ b/src/Components/Navigation/index.css
@@ -40,7 +40,6 @@
 
 #home-page .home-page-copy-content ul a:hover {
     text-shadow: rgb(168, 238, 246) 0px 0px 10px;
-    
 }
 
 #home-page .home-page-copy-content ul h1 {
@@ -64,6 +63,19 @@
     margin-top: 1rem;
     margin-bottom: 1rem;
     margin-left: 1rem;
+}
+
+#home-page .home-page-copy-content .reservation-options {
+    margin-bottom: 1rem;
+}
+
+#home-page .home-page-copy-content .reservation-options li {
+    font-size: 1.5em;
+}
+
+#home-page .home-page-copy-content .reservation-options li:hover {
+    text-shadow: rgb(168, 238, 246) 0px 0px 10px;
+    cursor: pointer;
 }
 
 @media only screen and (min-width: 320px) and (max-width: 690px) {
