--- a/src/root.css
+++ b/src/root.css
@@ -9,4 +9,6 @@ body, html {
     padding: 0;
     margin: 0;
     overflow: hidden;
+    background: rgb(249,181,180);
+    background: linear-gradient(180deg, rgba(249,181,180,1) 0%, rgba(30,38,84,1) 90%); 
 }
