--- a/src/Components/DinnerMenu/index.css
+++ b/src/Components/DinnerMenu/index.css
@@ -1,4 +1,4 @@
-#dinner-home-page .dinner-menu-container {
+.dinner-menu-container {
     position: absolute;
     top: 0;
     left: 0;
@@ -16,20 +16,21 @@
     opacity: 0;
 }
 
-#dinner-home-page .dinner-menu-container ul {
+.dinner-menu-container ul {
     list-style: none;
     padding: 0;
     margin-left: 1rem;
 }
 
-#dinner-home-page .dinner-menu-container ul h1,
-#dinner-home-page .dinner-menu-container ul h2,
-#dinner-home-page .dinner-menu-container ul h3 {
-    font-size: 1.5em;
+.dinner-menu-container ul h2,
+.dinner-menu-container ul h3 {
+    font-size: 1.2em;
+    font-weight: lighter;
     margin: 0;
+    cursor: pointer;
 }
 
-#dinner-home-page .dinner-menu-container ul a {
+.dinner-menu-container ul a {
     color: #fff;
     text-decoration: none;
     -webkit-transition: all .1s ease;
@@ -38,26 +39,36 @@
     transition: all .1s ease;
 }
 
-#dinner-home-page .dinner-menu-container ul a:hover {
+.dinner-menu-container ul a:hover {
     text-shadow: rgb(168, 238, 246) 0px 0px 10px;
     
 }
 
-#dinner-home-page .dinner-menu-container ul h1 {
+.dinner-menu-container ul h1 {
+    font-size: 1.5em;
+    margin: 0;
     -webkit-transition: all .1s ease;
     -moz-transition: all .1s ease;
     -ms-transition: all .1s ease;
     transition: all .1s ease;
-    cursor: pointer;
 }
 
-#dinner-home-page .dinner-menu-container ul h1:hover {
+.dinner-menu-container ul h2:hover {
     text-shadow: rgb(168, 238, 246) 0px 0px 10px;
 }
 
-#dinner-home-page .dinner-menu-container .navigation {
+.dinner-menu-container ul h3:hover {
+    text-shadow: rgb(168, 238, 246) 0px 0px 10px;
+}
+
+.dinner-menu-container .navigation {
     position: relative;
     z-index: 999;
+    overflow-y: auto;
+}
+
+.dinner-menu-container .navigation .item-description {
+    display: none;
 }
 
 .nav-toggle {
@@ -65,8 +76,12 @@
 }
 
 @media only screen and (min-width: 320px) and (max-width: 690px) {
-    #dinner-home-page .dinner-menu-container {
+    .dinner-menu-container {
         margin-left: 0;
         justify-content: flex-start;
+    }
+    
+    .dinner-menu-container .navigation {
+        width: 100vw;
     }
 }
