--- a/src/Components/Home/index.css
+++ b/src/Components/Home/index.css
@@ -17,13 +17,13 @@ video {
     transform: scale(1.3);
 }
 
-#brunch-home-page-video-container {
+#home-page-video-container {
     position: fixed;
     top: 0;
     left: 0;
     height: auto;
 }
 
-#brunch-home-page-video-mobile {
+#home-page-video-mobile {
     display: none;
 }
