--- a/src/Components/Navigation/index.css
+++ b/src/Components/Navigation/index.css
@@ -1,4 +1,4 @@
-#dinner-home-page .dinner-home-page-copy-content {
+#home-page .home-page-copy-content {
     position: absolute;
     top: 0;
     left: 0;
@@ -16,20 +16,20 @@
     opacity: 0;
 }
 
-#dinner-home-page .dinner-home-page-copy-content ul {
+#home-page .home-page-copy-content ul {
     list-style: none;
     padding: 0;
     margin-left: 1rem;
 }
 
-#dinner-home-page .dinner-home-page-copy-content ul h1,
-#dinner-home-page .dinner-home-page-copy-content ul h2,
-#dinner-home-page .dinner-home-page-copy-content ul h3 {
+#home-page .home-page-copy-content ul h1,
+#home-page .home-page-copy-content ul h2,
+#home-page .home-page-copy-content ul h3 {
     font-size: 1.5em;
     margin: 0;
 }
 
-#dinner-home-page .dinner-home-page-copy-content ul a {
+#home-page .home-page-copy-content ul a {
     color: #fff;
     text-decoration: none;
     -webkit-transition: all .1s ease;
@@ -38,11 +38,11 @@
     transition: all .1s ease;
 }
 
-#dinner-home-page .dinner-home-page-copy-content ul a:hover {
+#home-page .home-page-copy-content ul a:hover {
     text-shadow: rgb(168, 238, 246) 0px 0px 10px;
 }
 
-#dinner-home-page .dinner-home-page-copy-content ul h1 {
+#home-page .home-page-copy-content ul h1 {
     -webkit-transition: all .1s ease;
     -moz-transition: all .1s ease;
     -ms-transition: all .1s ease;
@@ -50,11 +50,11 @@
     cursor: pointer;
 }
 
-#dinner-home-page .dinner-home-page-copy-content ul h1:hover {
+#home-page .home-page-copy-content ul h1:hover {
     text-shadow: rgb(168, 238, 246) 0px 0px 10px;
 }
 
-#dinner-home-page .dinner-home-page-copy-content .header h1 {
+#home-page .home-page-copy-content .header h1 {
     color: #ED2124;
     font-family: "painter";
     text-transform: uppercase;
@@ -65,21 +65,25 @@
     margin-left: 1rem;
 }
 
-#dinner-home-page .dinner-home-page-copy-content .reservation-options {
+#home-page .home-page-copy-content .reservation-options {
     margin-bottom: 1rem;
 }
 
-#dinner-home-page .dinner-home-page-copy-content .reservation-options li {
+#home-page .home-page-copy-content .reservation-options li {
     font-size: 1.5em;
 }
 
-#dinner-home-page .dinner-home-page-copy-content .reservation-options li:hover {
+#home-page .home-page-copy-content .reservation-options li:hover {
     text-shadow: rgb(168, 238, 246) 0px 0px 10px;
     cursor: pointer;
 }
 
+#home-page .home-page-copy-content .nav-toggle {
+    margin-bottom: 0 ;
+}
+
 @media only screen and (min-width: 320px) and (max-width: 690px) {
-    #dinner-home-page .dinner-home-page-copy-content {
+    #home-page .home-page-copy-content {
         margin-left: 0;
         justify-content: flex-start;
     }
